Center image comparer

--- a/ImageCompadre.html
+++ b/ImageCompadre.html
@@ -43,19 +43,22 @@
     </div>
   </div>
 
-  <div class="img-comp-container" id="comp-container">
-    <div class="img-comp-img">
-      <img id="after">
+  <div class="center">
+    <div class="img-comp-container" id="comp-container">
+      <div class="img-comp-img">
+        <img id="after">
+      </div>
+      <div class="img-slider" id="img-slider">
+        <div class="before-title overlay-text" id="before-title"></div>
+        <div class="after-title overlay-text" id="after-title"></div>
+      </div>
+      <div class="img-comp-img" id="img-overlay">
+        <img id="before">
+      </div>
+      <div class="description overlay-text" id="description"></div>
     </div>
-    <div class="img-slider" id="img-slider">
-      <div class="before-title overlay-text" id="before-title"></div>
-      <div class="after-title overlay-text" id="after-title"></div>
-    </div>
-    <div class="img-comp-img" id="img-overlay">
-      <img id="before">
-    </div>
-    <div class="description overlay-text" id="description"></div>
   </div>
+
 
   <script>
     run();
